--- a/src/pages/styles/contact.css
+++ b/src/pages/styles/contact.css
@@ -36,3 +36,13 @@
 	justify-content: flex-start;
 	align-items: center;
 }
+
+@media (max-width: 600px) {
+	.contact-socials {
+		display: flex;
+		justify-content: center;
+	}
+}
+
+
+
