--- a/src/components/common/styles/navBar.css
+++ b/src/components/common/styles/navBar.css
@@ -59,12 +59,12 @@
 	.navbar {
 		margin-left: 25%;
 		margin-right: 25%;
-		width: 80%;
+		width: 100%;
 		font-size: 80%;
 	}
 
 	.nav-background {
-		width: 80%;
+		width: 380;
 		height: 40px;
 	}
 
