--- a/src/pages/styles/articles.css
+++ b/src/pages/styles/articles.css
@@ -69,6 +69,14 @@
 	font-weight: bold;
 }
 
+
+@media (max-width: 600px) {
+	.article-date{
+		font-size: 10px;
+	}
+}
+
+
 @media (max-width: 1024px) {
 	.articles-title {
 		width: 100% !important;
@@ -78,3 +86,5 @@
 		width: 100% !important;
 	}
 }
+
+
